Fix navbar overflow on smaller viewports

--- a/ChallengeDashboard/wwwroot/app.css
+++ b/ChallengeDashboard/wwwroot/app.css
@@ -134,7 +134,6 @@ table.leaderboard td.value {
 
 @media (max-width: 767px) {
     .primary-nav {
-        margin: -0.5rem;
         flex: 1;
     }
 
@@ -143,10 +142,14 @@ table.leaderboard td.value {
         margin-bottom: 1rem;
     }
 
+    .navbar .container {
+        align-self: revert;
+    }
+
     .navbar-brand {
         display: block;
         padding: 0;
-        margin: 0.25rem;
+        margin: 0.25rem 0.5rem;
         text-align: center;
     }
 
